Mon Mar 14 10:55:39 GMT 2011  Joe Hansen  <joedalton2@yahoo.dk>

	* po/da.po: Update from Translation Project.
	* man/THANKS: Update.

Wed Mar  2 11:12:13 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): Reset SIGPIPE to SIG_DFL on startup, to avoid
	  noisy output in the event that mandb was started from a context
	  where SIGPIPE was ignored (e.g. Fedora bug #649674).
	* NEWS: Document this.

Tue Jan 25 00:20:29 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (MAN_NAME): Consider .PD requests as paragraph
	  breaks, to work around poor lexical analysis that causes them to
	  be matched as .P and emit a stray trailing "D" (Debian bug
	  #611012).

Sun Jan 23 23:50:38 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Remove gnulib/m4/sockpfaf.m4, which was
	  removed along with the internal copy of libpipeline.
	* man/po4a/Makefile.am (EXTRA_DIST): Add Locale/Po4a/Manext.pm.
	  (PO4A_ENVIRONMENT): Set PERL5LIB to $(srcdir), not `pwd`.

Sun Jan 23 17:01:51 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* man/man1/apropos.man1 (OPTIONS), man/man1/lexgrog.man1 (OPTIONS),
	  man/man1/man.man1 (OPTIONS), man/man1/manconv.man1 (OPTIONS),
	  man/man1/manpath.man1 (OPTIONS), man/man1/whatis.man1 (OPTIONS),
	  man/man1/zsoelim.man1 (OPTIONS), man/man8/accessdb.man8 (OPTIONS),
	  man/man8/catman.man8 (OPTIONS), man/man8/mandb.man8 (OPTIONS):
	  Print commas in roman rather than bold.  Based on a patch from
	  David Prévot (Debian bug #600002).
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.
	  Manually unfuzzy translations.

Mon Jan 10 20:08:03 GMT 2011  Colin Watson  <cjwatson@debian.org>

	If mandb sees that A is a symlink to B, it should never store a
	whatis reference for B (Debian bug #204249).

	* src/check_mandirs.c (whatis_hashtable_free): New function.
	  (test_manfile): Change whatis_hash free function to
	  whatis_hashtable_free.  Fetch an ult_trace structure from ult_src,