@@ -48,6 +48,9 @@ Major changes since man-db 2.5.9:
 	  to avoid noisy output in case it was started in a context where
 	  SIGPIPE was ignored.
 
+	o SECTION entries in a user configuration file now override those in
+	  the system configuration file, rather than appending to them.
+
 man-db 2.5.9 (17 November 2010)
 ===============================
 
