@@ -1,3 +1,11 @@
+Tue Mar 15 10:48:19 GMT 2011  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (add_sections): Put user entries in a separate list.
+	  (get_sections): If any user entries are present, use them rather
+	  than system entries.
+	  (add_to_dirlist): Pass user to add_sections.
+	* NEWS: Document this.
+
 Mon Mar 14 10:55:39 GMT 2011  Joe Hansen  <joedalton2@yahoo.dk>
 
 	* po/da.po: Update from Translation Project.
